# MinAI

./: .gitignore  ARITHMETICOFINTELLIGENCE.docx  ARITHMETICOFINTELLIGENCE.md  CLAUDE.md  CMakeLists.txt  GUIDED_TOUR.docx  GUIDED_TOUR.md  LICENSE  Makefile  PREBUILT_BINARIES.md  README.md  TRAINER.md  maxai.cpp  md2pdf.sh  minai.cpp  minai.docx
.github/workflows/: build.yml
analog-sidequest/: ARCHITECTURE.md  README.md  STAGE0.md  STAGE0_5.md  STAGE1.md  STAGE1_GONOGO.md  STAGE3.md  STAGE4.md  analogai.html
analog-sidequest/silkscreen/: logo35x14.kicad_mod
analog-sidequest/stage0-sim/: .gitignore  Makefile  README.md  analog_sim.cpp  analog_sim.h  main.cpp  maxai_analog.cpp  sgd_test.cpp
analog-sidequest/stage0_5-firmware/: .gitignore  Makefile  README.md  stage0_5.cpp
analog-sidequest/stage0_5-hardware/: .gitignore  Effective_Black_R2-D2-bom.csv  Effective_Black_R2-D2-design-notes.md  Effective_Black_R2-D2.kicad_pcb  Effective_Black_R2-D2.kicad_pro  Effective_Black_R2-D2.kicad_sch  Effective_Black_R2-D2.kicad_sym  Effective_Black_R2-D2.net  Stage0_5-bom.csv  Stage0_5-design-notes.md  Stage0_5.csv  Stage0_5.kicad_pcb  Stage0_5.kicad_pro  Stage0_5.kicad_sch  Stage0_5.kicad_sym  Stage0_5.net  Untitled.kicad_mod  fp-lib-table  op_amp_wiring.md  sym-lib-table
analog-sidequest/stage0_5-hardware/bom/: ibom.html
analog-sidequest/stage0_5-hardware/footprints.pretty/: 302-S401.kicad_mod  C_0603_1608Metric.kicad_mod  Test_Point_1.8mm.kicad_mod  (+8 more)
extras/: descriptions.txt
extras/analog-sidequest/: ARCHITECTURE.md  README.md  STAGE1.md  STAGE2.md  STAGE3.md  STAGE4.md
(+6 files in other folders)
